@@ -1,3 +1,10 @@
+09/13/2003 Bob Rossi <bob@brasko.net>
+
+    * tgdb.exp: gdb_watchpoint, adding function to set watchpoints
+	* basic.c: add struct global_software_watchpoint and variable
+	software_watchpoint, this is for testing software watchpoints :)
+	* watchpoint.exp: adding new file to test watchpoints.
+
 version 0.3.4 (08/14/2003):
 
 version 0.3.3a (07/16/2003):
